--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "express": "^4.16.2",
     "material-ui": "^1.0.0-beta.29",
     "material-ui-icons": "^1.0.0-beta.17",
+    "mobx": "^3.4.1",
+    "mobx-react": "^4.3.5",
+    "mobx-state-tree": "^1.3.1",
     "raf": "^3.4.0",
     "razzle": "^0.8.7",
     "react": "^16.2.0",
