Change from razzle-creat-app to react-create-app, Change npm to yarn

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   web:
     image: node:latest
     working_dir: /tournaments-api-ui
-    command: bash -c "npm install && npm start"
+    command: bash -c "yarn install && yarn start"
     environment:
       PORT: 3001
     ports:
