--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     ]
   },
   "dependencies": {
+    "axios": "^0.17.1",
+    "lodash": "^4.17.4",
     "material-ui": "^1.0.0-beta.29",
     "material-ui-icons": "^1.0.0-beta.17",
     "mobx": "^3.4.1",
