--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     ]
   },
   "dependencies": {
+    "@fortawesome/fontawesome": "^1.1.2",
+    "@fortawesome/fontawesome-free-solid": "^5.0.4",
+    "@fortawesome/react-fontawesome": "^0.0.17",
     "autobind-decorator": "^2.1.0",
     "autoprefixer": "7.1.6",
     "axios": "^0.17.1",
@@ -49,7 +52,6 @@
     "js-cookie": "^2.2.0",
     "lodash": "^4.17.4",
     "material-ui": "^1.0.0-beta.29",
-    "material-ui-icons": "^1.0.0-beta.17",
     "mobx": "^3.4.1",
     "mobx-react": "^4.3.5",
     "mobx-state-tree": "^1.3.1",
