--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react": "^16.2.0",
     "react-dev-utils": "^5.0.0",
     "react-dom": "^16.2.0",
+    "react-popper": "^0.7.5",
     "react-router-dom": "^4.2.2",
     "sass-loader": "^6.0.6",
     "style-loader": "0.19.0",
