--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "mobx": "^3.4.1",
     "mobx-react": "^4.3.5",
     "mobx-state-tree": "^1.3.1",
+    "moment": "^2.20.1",
     "node-sass-chokidar": "^0.0.3",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
