--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "material-ui": "^1.0.0-beta.29",
     "mobx": "^3.4.1",
     "mobx-react": "^4.3.5",
+    "mobx-react-form": "^1.32.3",
     "mobx-state-tree": "^1.3.1",
     "moment": "^2.20.1",
     "node-sass-chokidar": "^0.0.3",
