--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "js-cookie": "^2.2.0",
     "lodash": "^4.17.4",
     "material-ui": "^1.0.0-beta.29",
+    "material-ui-pickers": "^1.0.0-beta.13.1",
     "mobx": "^3.4.1",
     "mobx-react": "^4.3.5",
     "mobx-react-form": "^1.32.3",
