--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "babel-runtime": "6.26.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
-    "css-loader": "0.28.7",
+    "css-loader": "0.28.9",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.0.1",
     "eslint": "4.10.0",
@@ -46,12 +46,12 @@
     "eslint-plugin-jsx-a11y": "5.1.1",
     "eslint-plugin-react": "7.4.0",
     "extract-text-webpack-plugin": "3.0.2",
-    "file-loader": "1.1.5",
+    "file-loader": "1.1.6",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
     "js-cookie": "^2.2.0",
-    "lodash": "^4.17.4",
+    "lodash": "4.17.5",
     "material-ui": "^1.0.0-beta.29",
     "material-ui-chip-input": "v1.0.0-beta.3",
     "material-ui-pickers": "^1.0.0-beta.13.1",
