--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@fortawesome/fontawesome-free-solid": "^5.0.4",
     "@fortawesome/react-fontawesome": "^0.0.17",
     "autobind-decorator": "^2.1.0",
-    "autoprefixer": "7.1.6",
+    "autoprefixer": "7.2.5",
     "axios": "^0.17.1",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
@@ -34,10 +34,10 @@
     "babel-preset-react-app": "^3.1.1",
     "babel-runtime": "6.26.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
-    "chalk": "1.1.3",
+    "chalk": "2.3.0",
     "css-loader": "0.28.9",
-    "dotenv": "4.0.0",
-    "dotenv-expand": "4.0.1",
+    "dotenv": "5.0.0",
+    "dotenv-expand": "4.2.0",
     "eslint": "4.10.0",
     "eslint-config-react-app": "^2.1.0",
     "eslint-loader": "1.9.0",
@@ -47,23 +47,23 @@
     "eslint-plugin-react": "7.4.0",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.6",
-    "fs-extra": "3.0.1",
-    "html-webpack-plugin": "2.29.0",
+    "fs-extra": "5.0.0",
+    "html-webpack-plugin": "2.30.1",
     "jest": "20.0.4",
     "js-cookie": "^2.2.0",
     "lodash": "4.17.5",
     "material-ui": "^1.0.0-beta.29",
     "material-ui-chip-input": "v1.0.0-beta.3",
     "material-ui-pickers": "^1.0.0-beta.13.1",
-    "mobx": "^3.4.1",
-    "mobx-react": "^4.3.5",
+    "mobx": "3.5.1",
+    "mobx-react": "4.4.1",
     "mobx-react-form": "^1.32.3",
     "mobx-state-tree": "^1.3.1",
     "moment": "^2.20.1",
     "node-sass-chokidar": "^0.0.3",
     "object-assign": "4.1.1",
-    "postcss-flexbugs-fixes": "3.2.0",
-    "postcss-loader": "2.0.8",
+    "postcss-flexbugs-fixes": "3.3.0",
+    "postcss-loader": "2.1.0",
     "promise": "8.0.1",
     "raf": "3.4.0",
     "react": "^16.2.0",
@@ -71,17 +71,17 @@
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
     "sass-loader": "^6.0.6",
-    "style-loader": "0.19.0",
+    "style-loader": "0.20.1",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
-    "webpack": "3.8.1",
-    "webpack-dev-server": "2.9.4",
+    "webpack": "3.10.0",
+    "webpack-dev-server": "2.11.1",
     "webpack-manifest-plugin": "1.3.2",
     "whatwg-fetch": "2.0.3"
   },
   "devDependencies": {
     "husky": "^0.14.3",
-    "lint-staged": "^6.0.0",
+    "lint-staged": "6.1.0",
     "prettier": "^1.10.2"
   },
   "jest": {
