--- a/package.json
+++ b/package.json
@@ -52,9 +52,9 @@
     "jest": "20.0.4",
     "js-cookie": "^2.2.0",
     "lodash": "4.17.5",
-    "material-ui": "^1.0.0-beta.29",
+    "material-ui": "1.0.0-beta.31",
     "material-ui-chip-input": "v1.0.0-beta.3",
-    "material-ui-pickers": "^1.0.0-beta.13.1",
+    "material-ui-pickers": "1.0.0-beta.14",
     "mobx": "3.5.1",
     "mobx-react": "4.4.1",
     "mobx-react-form": "^1.32.3",
