--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@fortawesome/fontawesome-free-solid": "^5.0.4",
     "@fortawesome/react-fontawesome": "^0.0.17",
     "autobind-decorator": "^2.1.0",
-    "autoprefixer": "7.2.5",
+    "autoprefixer": "8.0.0",
     "axios": "^0.17.1",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
@@ -34,7 +34,7 @@
     "babel-preset-react-app": "^3.1.1",
     "babel-runtime": "6.26.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
-    "chalk": "2.3.0",
+    "chalk": "2.3.1",
     "classnames": "^2.2.5",
     "css-loader": "0.28.9",
     "dotenv": "5.0.0",
@@ -66,6 +66,7 @@
     "postcss-flexbugs-fixes": "3.3.0",
     "postcss-loader": "2.1.0",
     "promise": "8.0.1",
+    "prop-types": "^15.6.0",
     "raf": "3.4.0",
     "react": "^16.2.0",
     "react-dev-utils": "^5.0.0",
@@ -75,7 +76,7 @@
     "style-loader": "0.20.1",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
-    "webpack": "3.10.0",
+    "webpack": "3.11.0",
     "webpack-dev-server": "2.11.1",
     "webpack-manifest-plugin": "1.3.2",
     "whatwg-fetch": "2.0.3"
