--- a/package.json
+++ b/package.json
@@ -50,6 +50,9 @@
     "file-loader": "1.1.6",
     "fs-extra": "5.0.0",
     "html-webpack-plugin": "2.30.1",
+    "i18next": "^10.3.0",
+    "i18next-browser-languagedetector": "^2.1.0",
+    "i18next-xhr-backend": "^1.5.1",
     "jest": "20.0.4",
     "js-cookie": "^2.2.0",
     "lodash": "4.17.5",
@@ -72,6 +75,7 @@
     "react": "^16.2.0",
     "react-dev-utils": "^5.0.0",
     "react-dom": "^16.2.0",
+    "react-i18next": "^7.3.6",
     "react-router-dom": "^4.2.2",
     "sass-loader": "^6.0.6",
     "style-loader": "0.20.1",
