--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "file-loader": "1.1.6",
     "fs-extra": "5.0.0",
     "html-webpack-plugin": "2.30.1",
-    "i18next": "^10.3.0",
+    "i18next": "10.4.1",
     "i18next-browser-languagedetector": "^2.1.0",
     "i18next-xhr-backend": "^1.5.1",
     "jest": "20.0.4",
@@ -60,7 +60,7 @@
     "material-ui-chip-input": "v1.0.0-beta.3",
     "material-ui-pickers": "1.0.0-beta.15.1",
     "mobx": "3.5.1",
-    "mobx-react": "4.4.1",
+    "mobx-react": "4.4.2",
     "mobx-react-form": "^1.32.3",
     "mobx-state-tree": "^1.3.1",
     "moment": "^2.20.1",
@@ -78,7 +78,7 @@
     "react-i18next": "^7.3.6",
     "react-router-dom": "^4.2.2",
     "sass-loader": "^6.0.6",
-    "style-loader": "0.20.1",
+    "style-loader": "0.20.2",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
     "webpack": "3.11.0",
@@ -88,7 +88,7 @@
   },
   "devDependencies": {
     "husky": "^0.14.3",
-    "lint-staged": "6.1.0",
+    "lint-staged": "6.1.1",
     "prettier": "^1.10.2"
   },
   "jest": {
