--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "html-webpack-plugin": "2.30.1",
     "i18next": "10.4.1",
     "i18next-browser-languagedetector": "^2.1.0",
+    "i18next-localstorage-cache": "^1.1.1",
     "i18next-xhr-backend": "^1.5.1",
     "jest": "20.0.4",
     "js-cookie": "^2.2.0",
