--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@fortawesome/react-fontawesome": "^0.0.17",
     "autobind-decorator": "^2.1.0",
     "autoprefixer": "8.0.0",
-    "axios": "^0.17.1",
+    "axios": "0.18.0",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
     "babel-jest": "20.0.3",
@@ -47,7 +47,7 @@
     "eslint-plugin-jsx-a11y": "5.1.1",
     "eslint-plugin-react": "7.4.0",
     "extract-text-webpack-plugin": "3.0.2",
-    "file-loader": "1.1.6",
+    "file-loader": "1.1.7",
     "fs-extra": "5.0.0",
     "html-webpack-plugin": "2.30.1",
     "i18next": "10.4.1",
@@ -76,7 +76,7 @@
     "react": "^16.2.0",
     "react-dev-utils": "^5.0.0",
     "react-dom": "^16.2.0",
-    "react-i18next": "^7.3.6",
+    "react-i18next": "7.4.0",
     "react-router-dom": "^4.2.2",
     "sass-loader": "^6.0.6",
     "style-loader": "0.20.2",
