--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
 /.idea
+/build
+/coverage
+/logs
+/node_modules
+
 .DS_Store
 
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-build
-coverage
-logs
-node_modules
