Upgrade create-react-app stuff

--- a/.babelrc
+++ b/.babelrc
@@ -3,6 +3,7 @@
     "react-app"
   ],
   "plugins": [
-    "transform-decorators-legacy"
+    ["@babel/plugin-proposal-decorators", { "legacy": true }],
+    ["@babel/plugin-proposal-class-properties", { "loose": true }]
   ]
 }
