--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@svgr/webpack": "4.1.0",
     "autobind-decorator": "^2.1.0",
     "autoprefixer": "8.0.0",
-    "axios": "0.18.0",
+    "axios": "^0.19.0",
     "babel-eslint": "10.0.1",
     "babel-jest": "^24.8.0",
     "babel-loader": "8.0.5",
@@ -56,7 +56,7 @@
     "jest-resolve": "24.7.1",
     "jest-watch-typeahead": "0.3.0",
     "js-cookie": "^2.2.0",
-    "lodash": "4.17.5",
+    "lodash": "^4.17.11",
     "material-ui": "1.0.0-beta.33",
     "material-ui-chip-input": "v1.0.0-beta.3",
     "material-ui-pickers": "1.0.0-beta.15.1",
